Commit// WHAT HAVE I DONE?

--- a/Home/Home_HTML.html
+++ b/Home/Home_HTML.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>LonoS: Home</title>
 
-
+    <link rel="stylesheet" href="CSS_Erklärung.css">
+    <link rel="stylesheet" href="CSS_Startseite.css">
 </head>
 <body>
 
