Commit/ New things. Finally something working.

--- a/Home/Home_HTML.html
+++ b/Home/Home_HTML.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="CSS_Startseite.css">
 </head>
 <body>
+    <div class="Menu">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+    <div class="line" style=" position: absolute; top: 15%"></div>
+    <div class="überschrift"><p>Hallo.</p></div>
+    <div class="Logo"><img src="img/Lonos.png"></div>
+    <div class="line"></div>
+    <div class="line" style=" position: absolute; top: 98%"></div>
+    <div class="ueber">
 
+        <p>Über uns.</p>
+    </div>
+    <div class="Text">
+        <p>We are a little Group of iOS and Android Developers, recently we also try to make Websites.</p>
+    </div>
 </body>
 </html>
