--- a/Home/Home_HTML.html
+++ b/Home/Home_HTML.html
@@ -13,17 +13,21 @@
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
-    <div class="line" style=" position: absolute; top: 15%"></div>
-    <div class="überschrift"><p>Hallo.</p></div>
+    <!--<div class="line" style=" position: absolute; top: 15%"></div>-->
+    <div class="überschrift"><p>Hello.</p></div>
     <div class="Logo"><img src="img/Lonos.png"></div>
-    <div class="line"></div>
+    <!--<div class="line"></div>-->
     <div class="line" style=" position: absolute; top: 98%"></div>
     <div class="ueber">
-
-        <p>Über uns.</p>
+        <p>Welcome.</p>
     </div>
     <div class="Text">
-        <p>We are a little Group of iOS and Android Developers, recently we also try to make Websites.</p>
+        <p>We are a little Group of iOS and Android Developers.
+        Mostly we are working on various Apps for the AppStore. But if time is left over we also make Websites.
+        So, if you need a Website for yourself, we got your back. Just send us an E-Mail, or contact us with the contact sheet below!</p>
+    </div>
+    <div class="ueber" style="top: 150%; left: 70%">
+        <p>Contact.</p>
     </div>
 </body>
 </html>
