Addded the whole text. Now doing the Off-Canavas Menu. //kroni

--- a/Home/Home_HTML.html
+++ b/Home/Home_HTML.html
@@ -7,27 +7,114 @@
     <link rel="stylesheet" href="CSS_Erklärung.css">
     <link rel="stylesheet" href="CSS_Startseite.css">
 </head>
+
+
+
+
+
+
+
+
 <body>
-    <div class="Menu">
+    <div class="Menu" onclick="openCanavas()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!--<div class="line" style=" position: absolute; top: 15%"></div>-->
-    <div class="überschrift"><p>Hello.</p></div>
+    <div class="überschrift"><p>Hallo.</p></div>
     <div class="Logo"><img src="img/Lonos.png"></div>
     <!--<div class="line"></div>-->
+
+
+
+
+
+
     <div class="line" style=" position: absolute; top: 98%"></div>
     <div class="ueber">
-        <p>Welcome.</p>
+        <p>Willkommen.</p>
     </div>
     <div class="Text">
-        <p>We are a little Group of iOS and Android Developers.
-        Mostly we are working on various Apps for the AppStore. But if time is left over we also make Websites.
-        So, if you need a Website for yourself, we got your back. Just send us an E-Mail, or contact us with the contact sheet below!</p>
+        <p>
+            Wir sind ein 4 köpfiges Team aus Programmierern.
+            Wir arbeiten aus Spaß an den verschiedensten Projekten.
+            Ob App, Game oder Website wir sind für alles offen und arbeiten mit
+            Leidenschaft an Lösungen, die unseren Vorstellungen entsprechen.
+            Wenn du eine Idee, oder einen Vorschlag hast, immer her damit!
+            Wir freuen uns über jegliche Art von Feedback.
+        </p>
     </div>
-    <div class="ueber" style="top: 150%; left: 70%">
-        <p>Contact.</p>
+
+
+
+
+
+
+
+
+
+
+    <div class="line" style=" position: absolute; top: 170%"></div>
+
+    <div class="ueber" style="top: 170%; left: 60%">
+        <p>Warum?</p>
     </div>
+
+
+
+    <div class="Text" style="right: 50%; left: 10%; top: 200%">
+            <p>
+                Naja das ist gar nicht mal so einfach…
+                Warum machen wir das ganze?
+                Wieso investieren wir unsere kostbare Freizeit in Dinge die
+                wir dann nicht einmal veröffentlichen,
+                geschweige denn damit Geld verdienen?
+            </p>
+    </div>
+
+
+
+
+
+
+
+
+    <div class="line" style=" position: absolute; top: 230%"></div>
+    <div class="ueber" style="top: 230%; left: 20%">
+        <p>Die Antwort ist einfach:</p>
+    </div>
+    <div class="Text" style="right: 30%; left: 30%; top: 260%; text-align: center">
+        <p>
+            Weil wir Spaß dran haben! Genauso wie Steve Jobs es einmal gesagt hat…
+        </p>
+    </div>
+
+
+
+
+
+
+
+
+    <p class="Text" style="top: 280%; text-align: center; left: 20%; right: 20%; font-size: 3cm; font-style: italic; font-weight: 200">THE ONLY WAY TO DO GREAT WORK IS TO LOVE WHAT YOU DO</p>
+
+
+    <div class="line" style=" position: absolute; top: 360%"></div>
+
 </body>
+
 </html>
