--- a/Home/Home_HTML.html
+++ b/Home/Home_HTML.html
@@ -6,9 +6,16 @@
 
     <link rel="stylesheet" href="CSS_Erklärung.css">
     <link rel="stylesheet" href="CSS_Startseite.css">
+    <link rel="stylesheet" href="NavCSS.css">
 </head>
 
 
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">Team</a>
+    <a href="#">Projekte</a>
+    <a href="#">Kontakt</a>
+</div>
 
 
 
@@ -16,7 +23,7 @@
 
 
 <body>
-    <div class="Menu" onclick="openCanavas()">
+    <div class="Menu" onclick="openNav()">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
@@ -114,6 +121,27 @@
 
 
     <div class="line" style=" position: absolute; top: 360%"></div>
+
+
+
+
+
+
+
+
+
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+    }
+
+    /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+    }
+</script>
 
 </body>
 
