Added a Slideshow for Projekts. Kroni

--- a/Home/HomeTab/Home_HTML.html
+++ b/Home/HomeTab/Home_HTML.html
@@ -13,7 +13,7 @@
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="#">Team</a>
-    <a href="#">Projekte</a>
+    <a href="../ProjektTab/projekt_idex.html">Projekte</a>
     <a href="#">Kontakt</a>
 </div>
 
@@ -43,7 +43,7 @@
 
     <!--<div class="line" style=" position: absolute; top: 15%"></div>-->
     <div class="überschrift"><p>Hallo.</p></div>
-    <div class="Logo"><img src="img/Lonos.png"></div>
+    <div class="Logo"><img src="../img/Lonos.png"></div>
     <!--<div class="line"></div>-->
 
 
