Added Contacts. Now adding the Team tab
Kroni

--- a/Home/HomeTab/Home_HTML.html
+++ b/Home/HomeTab/Home_HTML.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="CSS_Erklärung.css">
     <link rel="stylesheet" href="CSS_Startseite.css">
     <link rel="stylesheet" href="NavCSS.css">
+
 </head>
 
 
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">Team</a>
-    <a href="../ProjektTab/projekt_idex.html">Projekte</a>
-    <a href="#">Kontakt</a>
+    <a href="#">Team.</a>
+    <a href="../ProjektTab/projekt_idex.html">Projekte.</a>
+    <a href="../Kontakt/kontakt_html.html">Kontakt.</a>
 </div>
 
 
