Finished Website. Contact Formular isnt working properly
Kroni

--- a/Home/Kontakt/kontakt_html.html
+++ b/Home/Kontakt/kontakt_html.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>Kontakt: LAB73</title>
@@ -16,7 +16,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="../HomeTab/Home_HTML.html">Startseite.</a>
     <a href="../ProjektTab/projekt_idex.html">Projekte.</a>
-    <a href="#">Team.</a>
+
 </div>
 
 
