--- a/Home/HomeTab/Home_HTML.html
+++ b/Home/HomeTab/Home_HTML.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>LonoS: Home</title>
@@ -13,7 +13,6 @@
 
 <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">Team.</a>
     <a href="../ProjektTab/projekt_idex.html">Projekte.</a>
     <a href="../Kontakt/kontakt_html.html">Kontakt.</a>
 </div>
