--- a/Home/ProjektTab/projekt_idex.html
+++ b/Home/ProjektTab/projekt_idex.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <title>LAB73: Projekts</title>
     <link rel="stylesheet" href="ProjektsTabCSS.css">
+    <link rel="stylesheet" href="../HomeTab/NavCSS.css">
+    <link rel="stylesheet" href="../HomeTab/CSS_Startseite.css">
+    <link rel="stylesheet" href="../HomeTab/CSS_Erklärung.css">
 </head>
 <body>
 
+<div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="../HomeTab/Home_HTML.html">Startseite.</a>
+    <a href="../Kontakt/kontakt_html.html">Kontakt.</a>
 
-
-<div class="home">
-    <a href="../HomeTab/Home_HTML.html" style="
-    font-weight: 500;
-    font-size: 1cm;
-    color: white;
-    text-decoration: none;
-        ">Home.</a>
 </div>
+
+
+<div class="Menu" onclick="openNav()">
+    <div class="bar"></div>
+    <div class="bar"></div>
+    <div class="bar"></div>
+</div>
+
+
+
 
 <div class="ueberschrift">
     <p>Projekte.</p>
@@ -78,7 +87,18 @@
         dots[slideIndex-1].className += " active";
     }
 </script>
+<script>
+    function openNav() {
+        document.getElementById("mySidenav").style.width = "250px";
+        document.getElementById("main").style.marginLeft = "250px";
+    }
 
+    /* Set the width of the side navigation to 0 and the left margin of the page content to 0 */
+    function closeNav() {
+        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("main").style.marginLeft = "0";
+    }
+</script>
 
 
 
